--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# ========== Yunus Ignores ==========
+Initial_Feasibility_Report_Presentation
+datasets/*.csv
+datasets/*.sqlite
+# ===================================
